# Rhas

./: .gitmodules  Cargo.toml  PLAN.md  README.md  REFACTORING_PLAN.md
.github/workflows/: ci.yml  release.yml
docs/: has_architecture.md  hlk_object_format.md  human68k_syscalls.md  implementation_progress.md  m68000_addressing.md  original_has_optimizations.md  testing.md  verification_backlog.md
src/: context.rs  error.rs  lib.rs  main.rs  options.rs  source.rs
src/addressing/: encode.rs  mod.rs  parse.rs  tests.rs
src/context/: asm.rs  cpu.rs  mod.rs  scd.rs  section.rs  tests.rs
src/error/: codes.rs  context.rs  io.rs  mod.rs  printer.rs  reporter.rs  tests.rs
src/expr/: eval.rs  mod.rs  parse.rs  rpn.rs  tests.rs
src/instructions/: arith.rs  cmp.rs  data.rs  flow.rs  fpu.rs  logic.rs  mod.rs  ops.rs  shift.rs  tests.rs
src/lsp/: mod.rs  tests.rs
src/object/: mod.rs  writer.rs
src/options/: cpu.rs  mod.rs  parser.rs  tests.rs  types.rs
src/pass/: mod.rs  pass1.rs  pass2.rs  pass3.rs  prn.rs  temp.rs
src/source/: buf.rs  mod.rs  path.rs  stack.rs  tests.rs
src/symbol/: mod.rs  table.rs  tests.rs  types.rs
src/utils/: mod.rs  tests.rs
tests/: compare_ms5_simple.sh  compare_ms6_extended.sh  core_test.rs  error_message_test.rs  fpu_test.rs  gen_golden.sh  golden_test.rs  integration_test.rs  macro_test.rs  options_test.rs  pseudo_test.rs  scd_test.rs
tests/asm/: addq_opt.s  c4_core_opt.s  ea_020.s  ea_absshort.s  (+57 more)
tools/: setup_human68k_binaries.sh
vscode/: LICENSE  README.md  language-configuration.json  package-lock.json  package.json
(+33 files in other folders)
