[package]
name = "rhas"
version = "1.2.5-r1"
edition = "2021"
description = "X68000 HAS060X assembler ported to Rust"
authors = ["rhas contributors"]

[dependencies]
# コマンドライン引数解析
clap = { version = "4", features = ["derive"] }
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "=3.10.1"

[lib]
name = "rhas"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
